# FastApiBlogPet

./: .env.template  .gitignore  README.md  docker-compose-local.yaml  docker-compose-prod.yaml  docker-compose.yaml
backend/: .env.appconfig  .env.appconfig.template  .env.template  .env.test  Dockerfile  create_fast_api_app.py  main.py  pyproject.toml  pytest.ini  requierements.txt  start_backend.sh  test.db
backend/actions/: create_super_user.py
backend/alembic/versions/: 2025_02_16_1634-700ec5f88976_posts.py  2025_02_16_1924-c28c31e511c5_posts_fk_for_users2.py  2025_02_17_1033-faa06b4a2319_posts_fk_for_users.py  2025_02_17_1050-8190a16dd899_posts_fk_for_users.py  2025_02_17_1149-67348a007390_remove_access_token_tavle_id.py  2025_02_17_1311-5dac09c78915_post_parent_relation.py  2025_02_24_2230-974a61385f34_fix_post_table_no_parent.py  2025_02_25_1914-da6750af355c_fix_post_table_add_annotation.py  2025_02_25_1933-45e5a8213b91_fix_post_table_null_in_user_id.py  2025_02_25_1935-713cacfa1670_fix_post_table_null_in_user_id_2.py  2025_03_15_1456-29f595010a80_start.py  2025_03_15_1505-e5480c1a3a5d_create_tables.py
backend/api/: __init__.py
backend/api/api_v1/: __init__.py  posts.py
backend/api/dependencies/: current_user.py  services.py  unit_of_work.py
backend/core/: config.py
backend/core/models/: __init__.py  access_token.py  base.py  post.py  user.py
backend/crud/: posts.py
backend/repositories/: __init__.py  base.py  posts.py  users.py
backend/services/: __init__.py  posts.py
backend/tests/: conftest.py  simple_hendler_test.py
(+32 files in other folders)
