[project]
name = "microblog"
version = "0.1.0"
description = ""
authors = [
    {name = "Slava"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "envparse (>=0.2.0,<0.3.0)"
]

[tool.poetry]
package-mode = false

#[tool.poetry.dependencies]
#python = "^3.12"
#fastapi = "^0.111.0"
#pydantic = {extras = ["email"], version = "^2.7.1"}
#sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
#alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
